--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,12 @@ WEB_SITE_DATABASE_NAME=website
 WEB_SITE_DATABASE_USERNAME=root
 WEB_SITE_DATABASE_PASSWORD=root
 
+SHOP_DATABASE_HOST=127.0.0.1
+SHOP_DATABASE_PORT=3306
+SHOP_DATABASE_NAME=website
+SHOP_DATABASE_USERNAME=root
+SHOP_DATABASE_PASSWORD=root
+
 SOAP_HOST_NAME=127.0.0.1
 SOAP_PORT=7878
 SOAP_URI=urn:AC
